[gd_scene load_steps=3 format=3]

[ext_resource path="res://scripts/UIManager.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Action_panel.png" type="Texture2D" id=2]

[node name="UIManager" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HUDBackground" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 348.0
offset_bottom = 208.0
texture = ExtResource("2")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="HUDVBox" type="VBoxContainer" parent="Control/HUDBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_constants/separation = 10

[node name="HealthBar" type="ProgressBar" parent="Control/HUDVBox"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
max_value = 100.0

[node name="HealthLabel" type="Label" parent="Control/HUDVBox"]
layout_mode = 2
text = "HP: 0 / 0"

[node name="XPBar" type="ProgressBar" parent="Control/HUDVBox"]
layout_mode = 2
size_flags_horizontal = 3
value = 0.0
max_value = 100.0

[node name="XPLabel" type="Label" parent="Control/HUDVBox"]
layout_mode = 2
text = "Level 1 â€” XP 0 / 0"

[node name="TimerLabel" type="Label" parent="Control/HUDVBox"]
layout_mode = 2
text = "Time 00:00"

[node name="ToastLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
offset_left = -150.0
offset_right = 150.0
offset_top = 20.0
offset_bottom = 60.0
horizontal_alignment = 1
text = ""

[node name="ToastTimer" type="Timer" parent="Control"]
wait_time = 2.0
one_shot = true

[node name="EquipmentLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
horizontal_alignment = 2
text = "Loot: None"
